static/css/style.css
:root {
  --pico-primary: #1C7258 !important;
  --pico-primary-background: #1C7258 !important;
  --pico-primary-underline: #1C7258 !important;
  --pico-primary-hover: #009472 !important;
  --pico-primary-hover-background: #009472 !important;
  --pico-font-size: 105% !important;
  --pico-background-color: #fdfdfd !important;

}

body > header, body > footer {
  text-align: center;
}

header .logo {
    width: 100%;
    text-align: center;
}

figure {
    text-align: center;
    padding: 1em;
}

header .logo img {
    height: 72px;
}

footer p {
    font-size: 0.8em;
}

footer a {
    font-size: 1.2em;
    text-decoration: none;
}

footer .attribution a {
  font-size: 0.9em;
}
nav {
  display: inline-block;
  justify-content: normal;
}

nav a {
  display: inline-block;
  margin: 0 10px;
}

article header {
  text-align: left;
}

.members article img {
  width: 65%;
}

.members article header {
    text-align: center;
}

.members article header img {
  border-radius: 300px;
  margin: 1em;
}

.members article header a {
  text-decoration: none;
}

.services article {
  text-align: center;
}

h4 a {
  text-decoration: none;
}

h1, h2, h3, h4, h5 {
  font-weight: 550;
}

